# Fabric-UI-testing

./: .env.example  .gitignore  BPA_Analysis.ipynb  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements_visual_test.txt  visual_render_embed_multiplePics.spec.ts
.github/workflows/: visual-tests.yml
fabric_ci_test/: __init__.py  cli.py
helper_functions/: file_reader.py  get_workspace_reports_datasets.py  log_utils.py  report_html.py  token_helpers.py
metadata/reports/: reports_datasets.json
report/: all_reports_results.json  index.html  playwright_report.html  report.html
tests/: test_pbi_visual_validation.py  test_visual_render_embed_multiple_pics.py
tests/unit/: test_report_html.py
